--- a/_posts/2021-11-28-phd-marum.md
+++ b/_posts/2021-11-28-phd-marum.md
@@ -1,14 +1,14 @@
 ---
 layout: post
-title: Postdoc position in proxy records of past marine temperature variablity (Bremen, Germany)
+title: PhD position in proxy records of past marine temperature variablity (Bremen, Germany)
 subtitle: MARUM, AWI
-tags: [postdoc, Germany, proxy observations, paleoclimate, biogeochemistry]
+tags: [PhD, Germany, proxy observations, paleoclimate, biogeochemistry]
 comments: false
 ---
 We have funding for an exciting 3yr PhD project on marine temperature
 variability of the last millennia and robustness of the proxy record.
 The position in part of the MARUM Cluster of Excellence
-(https://urldefense.com/v3/__https://www.marum.de/en/The-Ocean-Floor.html__;!!KGKeukY!kSSKBNCvBUMNKau2y1NtPlzq8nzQiSxxB-Kh87yUfQeghPgdwtog0xSpS5igm6GbM4U$ ) and the ERC SPACE
+(https://www.marum.de/en/The-Ocean-Floor.html ) and the ERC SPACE
 (Space-time structure of climate change).
 
 The position encompasses lab work in organic geochemistry (Mass
@@ -17,9 +17,9 @@ understand how the past climate signal is recorded and can be best
 retrieved from sediment cores.
 
 The position will be situated at MARUM Bremen
-(https://urldefense.com/v3/__https://www.marum.de/en/about-us/HinrichsLab-Home.html__;!!KGKeukY!kSSKBNCvBUMNKau2y1NtPlzq8nzQiSxxB-Kh87yUfQeghPgdwtog0xSpS5igFdEkZvI$ ) with the
+(https://www.marum.de/en/about-us/HinrichsLab-Home.html) with the
 option to move to AWI Potsdam
-(https://urldefense.com/v3/__https://www.awi.de/en/science/geosciences/polar-terrestrial-environmental-systems/research-foci/earth-system-diagnostics.html__;!!KGKeukY!kSSKBNCvBUMNKau2y1NtPlzq8nzQiSxxB-Kh87yUfQeghPgdwtog0xSpS5igK59lNzM$ )
+(https://www.awi.de/en/science/geosciences/polar-terrestrial-environmental-systems/research-foci/earth-system-diagnostics.html)
 during the second half of the PhD.
 
 I would greatly appreciate it if you could let me know of any
