--- a/_posts/2024-11-20-phd-GMRI.md
+++ b/_posts/2024-11-20-phd-GMRI.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: PhD position in GMRI (USA)
+title: PhD position in physical oceanography (GMRI, USA)
 subtitle: Gulf of Maine Research Institute
 tags: [PhD, USA, circulation]
 comments: false
